# wakad_adv_py_6_8pm

./: README.md  main.py  pyproject.toml  requirements.txt
01 Variadic Functions and Decorators/: functions.ipynb
02 Class and Polymorphism/: class_polymorphism.ipynb
03 Polymorphism and Inheritance/: poly_inheritance.ipynb  poly_inheritance.py
04 Exception Handling/: exception.ipynb  exception.py
05 Numpy Arrays/: numpy_array.ipynb  numpy_array.py
06 Multithreading/: multithreading.ipynb  multithreading.py
07 WebScraping/: Regions.csv  Webscraping.ipynb
