[project]
name = "wakad-adv-python-6-8-pm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "notebook>=7.4.4",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]
